-
Bug
-
Resolution: Done
-
P1: Critical
-
6.4.0
-
-
1a0c4094e0 (qt/qtdeclarative/dev) 1a0c4094e0 (qt/tqtc-qtdeclarative/dev) b4ec071e4f (qt/qtdeclarative/6.4) b4ec071e4f (qt/tqtc-qtdeclarative/6.4) b4ec071e4f (qt/tqtc-qtdeclarative/tqtc/qtinsight-6.4)
Attached project fails to build. qmlcachegen seems to consume a lot of memory and eventually the build fails.
- relates to
-
QTBUG-107542 qmlcachegen infinite loop with certain statements
-
- Closed
-