tests/auto/qml/qmlcppcodegen/data/typePropagationLoop.qml
@@ -1,0 +1,9 @@
+import QtQml
+
+QtObject {
+    property int j:  {
+        var tmp = Qt.PartiallyChecked
+        for (var i = 0; i < Qt.Checked; i++) {}
+        return tmp + i;
+    }
+}
